[project]
name = "riceround_cloud"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/RiceRound/ComfyUI_RiceRound_Cloud"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_RiceRound_Cloud"
Icon = ""
